--- a/docker-nginx.conf
+++ b/docker-nginx.conf
@@ -20,6 +20,27 @@ http {
         server_name             localhost;
         client_max_body_size    32m;
 
+        # graphql start
+        # Forward /graphql to graphql gateway
+        location /graphql {
+            proxy_pass http://server-template-graphql:8080;
+            proxy_http_version 1.1;
+
+            # Remove /graphql from path
+            rewrite ^/graphql/?(.*) /$1 break;
+
+            proxy_redirect off;
+
+            # Headers
+            proxy_set_header X-Real-IP  $remote_addr;
+            proxy_set_header X-Forwarded-For $remote_addr;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+        # graphql end
+
         # server start
         # Forward /api to server
         location /api {
@@ -40,6 +61,27 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
         # server end
+
+        # www start
+        # Forward /www to www
+        # location /www {
+        #     proxy_pass http://server-template-www:8080;
+        #     proxy_http_version 1.1;
+        #
+        #     # Remove /www from path
+        #     rewrite ^/www/?(.*) /$1 break;
+        #
+        #     proxy_redirect off;
+        #
+        #     # Headers
+        #     proxy_set_header X-Real-IP $remote_addr;
+        #     proxy_set_header X-Forwarded-For $remote_addr;
+        #     proxy_set_header Upgrade $http_upgrade;
+        #     proxy_set_header Connection 'upgrade';
+        #     proxy_set_header Host $host;
+        #    proxy_cache_bypass $http_upgrade;
+        # }
+        # www end
 
         # admin start
         # Forward /admin to admin
