--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "scripts": {
     "install-ci": "echo '# No additional dependencies need to be installed in ci mode'",
     "install-dev": "echo '# Installing all libraries on host for code editor support. TODO how to minimize as --only=dev affects devDepencies also?' && npm run install-all",
-    "install-all": "npm-run-all install-all:admin install-all:client install-all:server install-all:worker ",
+    "install-all": "npm-run-all install-all:admin install-all:client install-all:graphql install-all:server install-all:worker install-all:www ",
     "install-all:admin": "cd admin && npm install && npm run types-install",
     "install-all:client": "cd client && npm install && npm run types-install",
+    "install-all:graphql": "cd graphql && npm install && npm run types-install",
     "install-all:server": "cd server && npm install && npm run types-install",
     "install-all:worker": "cd worker && npm install && npm run types-install",
+    "install-all:www": "cd www && npm install && npm run types-install",
     "taito-init": "taito -z init:${taito_env} && npm run import-db-data",
     "taito-init:clean": "taito -z init:${taito_env} --clean && npm run import-db-data",
     "taito-init:local:clean": "npm run taito-init:clean && npm run clean:storage",
@@ -16,28 +18,36 @@
     "info:local": "cat docker-compose.yaml | grep '# SHOW ON INFO'",
     "info": "yes | taito secrets:${taito_env} | grep :\\{PLAIN\\} | sed -e 's|{PLAIN}| |'",
     "info_todo_comment": "TODO autoconfirm on taito secrets:prod",
-    "lint": "echo Running lint locally && npm-run-all --parallel lint:admin lint:client lint:server lint:worker ",
+    "lint": "echo Running lint locally && npm-run-all --parallel lint:admin lint:client lint:graphql lint:server lint:worker lint:www ",
     "lint:admin": "cd admin && npm run lint",
     "lint:client": "cd client && npm run lint",
+    "lint:graphql": "cd graphql && npm run lint",
     "lint:server": "cd server && npm run lint",
     "lint:worker": "cd worker && npm run lint",
-    "unit": "echo Running unit tests locally && npm-run-all --parallel unit:admin unit:client unit:server unit:worker ",
+    "lint:www": "cd www && npm run lint",
+    "unit": "echo Running unit tests locally && npm-run-all --parallel unit:admin unit:client unit:graphql unit:server unit:worker unit:www ",
     "unit:admin": "cd admin && npm run unit",
     "unit:client": "cd client && npm run unit",
+    "unit:graphql": "cd graphql && npm run unit",
     "unit:server": "cd server && npm run unit",
     "unit:worker": "cd worker && npm run unit",
-    "test": "npm-run-all test:admin test:client test:server test:worker ",
+    "unit:www": "cd www && npm run unit",
+    "test": "npm-run-all test:admin test:client test:graphql test:server test:worker test:www ",
     "test:admin": "taito util-test:admin:${taito_env}",
     "test:client": "taito util-test:client:${taito_env}",
+    "test:graphql": "taito util-test:graphql:${taito_env}",
     "test:server": "taito util-test:server:${taito_env}",
     "test:worker": "echo DISABLED taito util-test:worker:${taito_env}",
+    "test:www": "echo DISABLED taito util-test:www:${taito_env}",
     "_check-deps_comment": "TODO how to pass -u argument from check-deps to check-deps:TARGET?",
-    "check-deps": "npm-run-all \"check-deps:root {@}\" \"check-deps:admin {@}\" \"check-deps:client {@}\" \"check-deps:server {@}\" \"check-deps:worker {@}\" -- ",
+    "check-deps": "npm-run-all \"check-deps:root {@}\" \"check-deps:admin {@}\" \"check-deps:client {@}\" \"check-deps:graphql {@}\" \"check-deps:server {@}\" \"check-deps:worker {@}\" \"check-deps:www {@}\" -- ",
     "check-deps:root": "npm run _check-deps-script -- . ",
     "check-deps:admin": "npm run _check-deps-script -- admin ",
     "check-deps:client": "npm run _check-deps-script -- client ",
+    "check-deps:graphql": "npm run _check-deps-script -- client ",
     "check-deps:server": "npm run _check-deps-script -- server ",
     "check-deps:worker": "npm run _check-deps-script -- worker ",
+    "check-deps:www": "npm run _check-deps-script -- www ",
     "_check-deps-script": "sh -c 'echo --- ${0} --- && cd ${0} && (npm-check ${@} || :) && echo && echo \"NOTE: Many of the devDependencies and ~ references are actually in use even if reported unused. But all unused dependencies can usually be removed from package.json.\" && echo' ",
     "check-size": "npm-run-all \"check-size:admin {@}\" \"check-size:client {@}\" -- ",
     "check-size:admin": "cd admin && echo --- admin --- && npm run analyze -- ",
