--- a/admin/package.json
+++ b/admin/package.json
@@ -93,6 +93,6 @@
     "webpack-dev-server": "~3.1.8",
     "webpack-merge": "~4.1.4"
   },
-  "_flowComment": "NOTE: for flow add also flow-bin and flow-typed",
+  "_flowComment": "NOTE: for flow add also flow-bin, flow-typed and babel-preset-flow",
   "_webpackServe": "TODO: replace webpack-dev-server with webpack-serve?"
 }
