--- a/server/package.json
+++ b/server/package.json
@@ -56,5 +56,5 @@
     "prettier": "~1.14.2",
     "pretty-quick": "^1.6.0"
   },
-  "_flowComment": "NOTE: for flow add also flow-bin and flow-typed"
+  "_flowComment": "NOTE: for flow add also flow-bin, flow-typed and babel-preset-flow"
 }
