--- a/graphql/package.json
+++ b/graphql/package.json
@@ -6,18 +6,17 @@
     "types": "if [ -f .flowconfig ]; then flow; elif [ -f tsconfig.json ]; then echo TODO run typescript; fi",
     "pretty-quick": "pretty-quick",
     "lint": "eslint . --ignore-path .eslintignore --quiet",
-    "unit": "mocha --require babel-core/register --recursive 'src/**/*.unit.js'",
-    "test": "mocha --require babel-core/register --recursive \"src/**/${test_name:-*}.test.js\" \"test/**/${test_name:-*}.test.js\"",
+    "unit": "mocha --require @babel/register --recursive 'src/**/*.unit.js'",
+    "test": "mocha --require @babel/register --recursive \"src/**/${test_name:-*}.test.js\" \"test/**/${test_name:-*}.test.js\"",
     "start": "npm run start:dev",
     "start:dev": "NODE_ENV=development nodemon -L ./index.js --ignore 'test/*.js'",
     "start:dev:trace": "NODE_ENV=development nodemon -L ./index.js --ignore 'test/*.js'",
     "start:prod": "NODE_ENV=production nodemon -L ./index.production.js",
     "build:prod": "NODE_ENV=production babel -d ../build --ignore node_modules ."
   },
-  "_comment": "TODO upgrade koa-jwt. the latest breaks determineAuthMethod()",
   "dependencies": {
-    "babel-polyfill": "~6.26.0",
-    "babel-runtime": "~6.26.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/runtime": "^7.0.0",
     "koa": "~2.5.3",
     "koa-cache-control": "~2.0.0",
     "koa-proxy": "0.9.0",
@@ -25,13 +24,13 @@
     "request-promise-native": "~1.0.5"
   },
   "devDependencies": {
-    "babel-cli": "~6.26.0",
-    "babel-core": "~6.26.3",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "babel-eslint": "~9.0.0",
-    "babel-plugin-transform-object-rest-spread": "~6.26.0",
-    "babel-plugin-transform-runtime": "~6.23.0",
-    "babel-preset-env": "~1.7.0",
-    "babel-register": "~6.26.0",
     "chai": "~4.1.2",
     "chai-as-promised": "~7.1.1",
     "eslint": "~5.5.0",
