--- a/package.json
+++ b/package.json
@@ -55,8 +55,6 @@
     "project-contacts": "cat PROJECT.md | sed -n -e '/^## Contacts.*$/,/^#.*$/{ /^## Contacts.*$/d; /^#.*$/d; p; }'",
     "docs": "echo TODO: generate docs in package.json",
     "scan": "echo 'Linting is executed in Dockerfiles during build' && echo 'TODO: execute code analysis here?'",
-    "commitmsg": "commitlint -E GIT_PARAMS",
-    "precommit": "if [[ $taito_mode != 'ci' ]]; then npm run precommit:branch && npm run precommit:lint; fi",
     "precommit:branch": "if git-branch-is -q test || git-branch-is -q stag || git-branch-is -q master; then echo 'ERROR: You cannot commit changes directly to this environment branch. Only fast-forward merge is allowed.' && echo && exit 1; fi",
     "precommit:lint": "echo 'SKIP: Skipping linting on commit since we are already continuously linting during development.'",
     "prepush": "if [[ $taito_mode != 'ci' ]]; then npm-run-all --parallel lint disabled-types unit; fi",
@@ -64,6 +62,12 @@
     "disabled-types": "echo flow/typescript check disabled on prepush",
     "release-pre:prod": "semantic-release --dry-run",
     "release-post:prod": "semantic-release --no-ci"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "if [[ $taito_mode != 'ci' ]]; then npm run precommit:branch && npm run precommit:lint; fi",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   },
   "commitlint": {
     "extends": [
@@ -149,8 +153,8 @@
   "devDependencies": {
     "@commitlint/cli": "^7.1.2",
     "@commitlint/config-conventional": "^7.1.2",
-    "git-branch-is": "~2.0.0",
-    "husky": "~0.14.3",
+    "git-branch-is": "^2.1.0",
+    "husky": "^1.2.0",
     "npm-run-all": "~4.1.3",
     "semantic-release": "^15.9.15"
   }
