--- a/admin/package.json
+++ b/admin/package.json
@@ -19,65 +19,73 @@
   "_NoteThereWereAdded_Obsolete?": "axios, babel-polyfill, history, immutability-helper, prop-types, redux-actions, qs",
   "_Note": "unused depencencies bevause admin GUI is still under construction",
   "dependencies": {
-    "@material-ui/core": "~3.0.3",
+    "@babel/polyfill": "^7.0.0",
+    "@material-ui/core": "^3.6.0",
     "@material-ui/icons": "~3.0.1",
     "axios": "~0.18.0",
-    "babel-polyfill": "~6.26.0",
     "data-generator": "~1.0.0",
     "fakerest": "~2.1.0",
-    "fetch-mock": "~6.5.2",
+    "fetch-mock": "^7.2.5",
     "history": "~4.7.2",
-    "immutability-helper": "~2.7.1",
+    "immutability-helper": "^2.8.1",
     "json-graphql-server": "~2.1.1",
     "prop-types": "~15.6.2",
-    "qs": "~6.5.2",
-    "ra-data-fakerest": "~2.3.0",
-    "ra-data-graphql-simple": "~2.3.0",
-    "ra-data-simple-rest": "~2.3.0",
-    "ra-input-rich-text": "~2.3.0",
+    "qs": "^6.6.0",
+    "ra-data-fakerest": "^2.4.0",
+    "ra-data-graphql-simple": "^2.4.3",
+    "ra-data-simple-rest": "^2.4.3",
+    "ra-input-rich-text": "^2.4.2",
     "ra-language-english": "~2.3.0",
     "ra-language-french": "~2.3.0",
-    "react": "~16.5.0",
-    "react-admin": "~2.3.0",
-    "react-dom": "~16.5.0",
-    "react-redux": "~5.0.7",
+    "react": "^16.6.3",
+    "react-admin": "^2.4.3",
+    "react-dom": "^16.6.3",
+    "react-redux": "^5.1.1",
     "react-router-dom": "~4.3.1",
-    "react-scripts": "~1.1.5",
+    "react-scripts": "^2.1.1",
     "recompose": "~0.30.0",
     "redux-actions": "~2.6.1",
     "redux-form": "~7.4.2",
     "redux-saga": "~0.16.0",
-    "styled-components": "~3.4.6",
-    "uglifyjs-webpack-plugin": "~1.3.0"
+    "styled-components": "^4.1.1",
+    "uglifyjs-webpack-plugin": "^2.0.1"
   },
   "devDependencies": {
-    "babel-cli": "~6.26.0",
-    "babel-core": "~6.26.3",
-    "babel-eslint": "~9.0.0",
-    "babel-jest": "~23.6.0",
-    "babel-loader": "~7.1.5",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.4.2",
+    "babel-loader": "^8.0.4",
     "babel-plugin-react-transform": "~3.0.0",
-    "babel-plugin-styled-components": "~1.6.4",
-    "babel-plugin-syntax-dynamic-import": "~6.18.0",
-    "babel-preset-env": "~1.7.0",
-    "babel-preset-react": "~6.24.1",
-    "babel-preset-stage-2": "~6.24.1",
+    "babel-plugin-styled-components": "^1.9.0",
     "css-loader": "~1.0.0",
-    "eslint": "~5.5.0",
+    "eslint": "^5.9.0",
     "eslint-config-airbnb": "~17.1.0",
     "eslint-config-airbnb-base": "~13.1.0",
-    "eslint-config-prettier": "~3.0.1",
+    "eslint-config-prettier": "^3.3.0",
     "eslint-loader": "~2.1.0",
-    "eslint-plugin-babel": "~5.2.0",
+    "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "~2.14.0",
     "eslint-plugin-jsx-a11y": "~6.1.1",
-    "eslint-plugin-prettier": "~2.6.2",
+    "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "~7.11.1",
     "file-loader": "~2.0.0",
     "html-webpack-plugin": "~3.2.0",
     "jest": "~23.6.0",
     "json-loader": "~0.5.7",
-    "prettier": "~1.14.2",
+    "prettier": "^1.15.2",
     "pretty-quick": "^1.6.0",
     "react-hot-loader": "~4.3.6",
     "redux-devtools": "~3.4.1",
@@ -87,7 +95,7 @@
     "redux-saga-tester": "~1.0.379",
     "redux-testkit": "~1.0.6",
     "style-loader": "~0.23.0",
-    "webpack": "~4.18.0",
+    "webpack": "^4.26.1",
     "webpack-bundle-analyzer": "~3.0.1",
     "webpack-cli": "~3.1.0",
     "webpack-dev-server": "~3.1.8",
