--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,28 +1,60 @@
 {
-  presets: [
+  "presets": [
     [
-      'env',
+      "@babel/preset-env",
       {
-        loose: true,
-        modules: false
+        "loose": true,
+        "modules": false
       }
     ],
-    // NOTE: for flow
-    // "flow",
-    'stage-2',
-    'react'
+    // NOTE: flow flow
+    // "@babel/preset-flow",
+    "@babel/preset-react"
   ],
-  env: {
-    // When testing we want to compile modules to commonjs
-    test: {
-      presets: ['es2015', 'stage-2', 'react']
+  "env": {
+    "test": {
+      "presets": [
+        "@babel/preset-env",
+        "@babel/preset-react"
+      ],
+      "plugins": [
+        "@babel/plugin-syntax-dynamic-import",
+        "@babel/plugin-syntax-import-meta",
+        "@babel/plugin-proposal-class-properties",
+        "@babel/plugin-proposal-json-strings",
+        [
+          "@babel/plugin-proposal-decorators",
+          {
+            "legacy": true
+          }
+        ],
+        "@babel/plugin-proposal-function-sent",
+        "@babel/plugin-proposal-export-namespace-from",
+        "@babel/plugin-proposal-numeric-separator",
+        "@babel/plugin-proposal-throw-expressions"
+      ]
     },
-    development: {
-      plugins: [
-        // NOTE: for styled components
-        'babel-plugin-styled-components',
-        'react-hot-loader/babel'
+    "development": {
+      "plugins": [
+        "babel-plugin-styled-components",
+        "react-hot-loader/babel"
       ]
     }
-  }
+  },
+  "plugins": [
+    "@babel/plugin-syntax-dynamic-import",
+    "@babel/plugin-syntax-import-meta",
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-json-strings",
+    [
+      "@babel/plugin-proposal-decorators",
+      {
+        "legacy": true
+      }
+    ],
+    "@babel/plugin-proposal-function-sent",
+    "@babel/plugin-proposal-export-namespace-from",
+    "@babel/plugin-proposal-numeric-separator",
+    "@babel/plugin-proposal-throw-expressions"
+  ]
 }
