--- a/client/package.json
+++ b/client/package.json
@@ -17,40 +17,48 @@
     ]
   },
   "dependencies": {
-    "@material-ui/core": "~3.0.3",
+    "@babel/polyfill": "^7.0.0",
+    "@material-ui/core": "^3.6.0",
     "@material-ui/icons": "~3.0.1",
     "axios": "~0.18.0",
-    "babel-polyfill": "~6.26.0",
     "history": "~4.7.2",
-    "immutability-helper": "~2.7.1",
+    "immutability-helper": "^2.8.1",
     "lodash": "~4.17.10",
     "prop-types": "~15.6.2",
-    "query-string": "~6.1.0",
+    "query-string": "^6.2.0",
     "raven-js": "~3.27.0",
-    "react": "~16.5.0",
-    "react-dom": "~16.5.0",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "react-loadable": "~5.5.0",
-    "react-redux": "~5.0.7",
+    "react-redux": "^5.1.1",
     "react-router-dom": "~4.3.1",
     "react-router-redux": "~5.0.0-alpha.9",
     "redux": "~4.0.0",
     "redux-actions": "~2.6.1",
     "redux-saga": "~0.16.0",
-    "styled-components": "~3.4.6",
-    "uglifyjs-webpack-plugin": "~1.3.0"
+    "styled-components": "^4.1.1",
+    "uglifyjs-webpack-plugin": "^2.0.1"
   },
   "devDependencies": {
-    "babel-cli": "~6.26.0",
-    "babel-core": "~6.26.3",
-    "babel-eslint": "^9.0.0",
-    "babel-jest": "^23.6.0",
-    "babel-loader": "^7.1.5",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.4.2",
+    "babel-loader": "^8.0.4",
     "babel-plugin-react-transform": "^3.0.0",
     "babel-plugin-styled-components": "^1.6.4",
-    "babel-plugin-syntax-dynamic-import": "~6.18.0",
-    "babel-preset-env": "~1.7.0",
-    "babel-preset-react": "~6.24.1",
-    "babel-preset-stage-2": "~6.24.1",
     "css-loader": "^1.0.0",
     "eslint": "^5.5.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -60,7 +68,7 @@
     "eslint-plugin-babel": "^5.2.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-prettier": "~2.6.0",
+    "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "~3.2.0",
